# cph-multi-objective-router

./: .gitattributes  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .gitignore  README.md  export_openapi.py  pyproject.toml  test.http
backend/app/: costs.py  geocoding.py  graph_layer_service.py  graph_state.py  layer_service.py  main.py  models.py  overlays.py  route_planner.py  typing_aliases.py  value_parsing.py
backend/data/overlays/: hills.json  scenic.json  snow.json  uphill.json
backend/notebooks/: test.ipynb
backend/scripts/: plot_evaluation.py  run_evaluation.py
backend/tests/: conftest.py  test_costs.py  test_geocoding_and_main.py  test_graph_layer_service.py  test_graph_state.py  test_layer_service.py  test_overlays.py  test_route_planner.py  test_value_parsing_and_models.py
frontend/: .gitignore  README.md  eslint.config.mjs  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  vite.config.ts
frontend/src/: App.tsx  AttributeOverlay.tsx  Map.tsx  MarkerPickController.tsx  OriginDestinationMarkers.tsx  OverlayLayer.tsx  RouteAnalysisPanel.tsx  RouteBoundsController.tsx  RouteLayer.tsx  RoutePanel.tsx  RouteStatsPanel.tsx  RouteViewportController.tsx  SelectedSegment.tsx  StartEndMarkers.tsx  StatusBar.tsx  StatusNotice.tsx  constants.ts  main.tsx  route-metrics.ts  utils.ts
frontend/src/types/: global.ts
