[project]
name = "cph-multi-objective-router"
version = "0.6.0"
description = "Multi-objective urban router and navigation app"
readme = "README.md"
authors = [
    { name = "Martin Kedmenec", email = "70742985+audio-engineer@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "geojson>=3.2.0",
    "geojson-pydantic>=2.1.0",
    "geopandas>=1.1.2",
    "osmnx[all]>=2.0.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "types-geopandas>=1.1.2.20260120",
    "types-networkx>=3.6.1.20260210",
    "types-requests>=2.32.4.20260107",
    "types-shapely>=2.1.0.20250917",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",
    "PLR2004",
    "ARG001",
    "ARG005",
    "ANN001",
    "N803",
    "RET504",
    "EM101",
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.basedpyright]
typeCheckingMode = "all"
include = ["app", "tests", "export_openapi.py"]
exclude = ["notebooks"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = ".", extraPaths = ["."] }]
